estilizando tela de login de usuario

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <title>Paciente</title>
   </head>
-  <body>
+  <body style="background-color: #ddd8d8">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" ></div>
     <script src="https://unpkg.com/react/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
     <script type="module" src="/src/index.jsx"></script>
