--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Paciente</title>
   </head>
-  <body style="background-color: #5e5a5a">
+  <body style="background-color: #8a8a8a">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" ></div>
     <script src="https://unpkg.com/react/umd/react.development.js"></script>
